--- a/index.html
+++ b/index.html
@@ -1,30 +1,20 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
+    <title>Treecreeper Testing Site</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>Treecreeper Test</title>
-    <meta
-      name="description"
-      content="A simple HTML5 Template for new projects."
-    />
-    <meta name="author" content="SitePoint" />
-
-    <meta property="og:title" content="A Basic HTML5 Template" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://www.sitepoint.com/a-basic-html5-template/"
-    />
-
+    <link rel="icon" href="images/iconmonstr-brick-6-240.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
-      <h1><img src="" alt="Logo" /><a href="#"></a></h1>
       <ul>
+        <li>
+          <img src="images/iconmonstr-brick-6-240.png" alt="Logo" /><a
+            href="#"
+          ></a>
+        </li>
         <li><a href="#">About</a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">Our Partners</a></li>
