--- a/index.html
+++ b/index.html
@@ -11,15 +11,55 @@
     <nav>
       <ul>
         <li>
-          <img src="images/iconmonstr-brick-6-240.png" alt="Logo" /><a
-            href="#"
-          ></a>
+          <a href="">
+            <img src="images/iconmonstr-brick-6-240.png" alt="Logo" />
+          </a>
         </li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Our Partners</a></li>
-        <li><a href="#">Get In Touch</a></li>
+        <li><a href="#">Stores</a></li>
+        <li><a href="#">Ideas & Advice</a></li>
+        <li><a href="#">Basket</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
+    <section class="products-nav">
+      <ul>
+        <li>
+          <a href="">
+            Bedroom
+          </a>
+        </li>
+        <li>
+          <a href="">
+            Kitchen
+          </a>
+        </li>
+        <li>
+          <a href="">
+            Garden
+          </a>
+        </li>
+        <li>
+          <a href="">
+            DIY
+          </a>
+        </li>
+        <li>
+          <a href="">
+            Electronics
+          </a>
+        </li>
+      </ul>
+    </section>
+    <article class="sale-article">
+      <h2>Sale!</h2>
+    </article>
+    <footer>
+      <ul>
+        <li><a href="">Instagram</a></li>
+        <li><a href="">Facebook</a></li>
+        <li><a href="">Twitter</a></li>
+        <li><a href="">Email</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
