worked on articles styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Treecreeper Testing Site</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="images/iconmonstr-brick-6-240.png" />
+    <link rel="icon" href="images/iconmonstr-circle-1-240 (1) (1).png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -12,7 +12,7 @@
       <ul>
         <li>
           <a href="">
-            <img src="images/iconmonstr-brick-6-240.png" alt="Logo" />
+            <img src="images/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
           </a>
         </li>
         <li><a href="#">Stores</a></li>
