started working on sample category page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="products-nav">
       <ul>
         <li>
-          <a href="">
+          <a href="/category-pages/bedroom-category-page.html">
             Bedroom
           </a>
         </li>
@@ -162,7 +162,7 @@
         dolorem iure debitis.
       </p>
     </article>
-    <footer>
+    <footer class="socials-footer">
       <ul>
         <li><a href="">Instagram</a></li>
         <li><a href="">Facebook</a></li>
