--- a/category-pages/bedroom-category-page.html
+++ b/category-pages/bedroom-category-page.html
@@ -11,7 +11,7 @@
       <ul>
         <li>
           <a href="">
-            <img src="../images/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
+            <img src="../images/icons/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
           </a>
         </li>
         <li><a href="#">Stores</a></li>
@@ -50,7 +50,9 @@
       </ul>
     </section>
     <section class="product-page-options">
-      <ul><li></li></ul>
+      <ul>
+        <li><a href="#"><img src="../images/photos/deconovo-gVKmonDbotU-unsplash.jpg" alt="bed"></a></li>
+      </ul>
     </section>
     <footer class="socials-footer">
   <ul>
