fixed image spacing

--- a/category-pages/bedroom-category-page.html
+++ b/category-pages/bedroom-category-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <title>Document</title>
+    <title>Treecreeper Test Website | Category Page</title>
 </head>
 <body>
 <nav>
@@ -51,7 +51,14 @@
     </section>
     <section class="product-page-options">
       <ul>
-        <li><a href="#"><img src="../images/photos/deconovo-gVKmonDbotU-unsplash.jpg" alt="bed"></a></li>
+        <li>
+          <img src="../images/photos/deconovo-gVKmonDbotU-unsplash.jpg" alt="bed">\
+          <button>Big Beds</button>
+        </li>
+        <li>
+          <img src="../images/photos/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="bed">\
+          <button>Big Beds</button>
+        </li>
       </ul>
     </section>
     <footer class="socials-footer">
