--- a/category-pages/bedroom-category-page.html
+++ b/category-pages/bedroom-category-page.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
-    <title>Treecreeper Test Website | Category Page</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="../style.css">
+	<title>Treecreeper Test Website | Category Page</title>
 </head>
+
 <body>
-<nav>
-      <ul>
-        <li>
-          <a href="">
-            <img src="../images/icons/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
+	<nav>
+		<ul>
+			<li>
+				<a href="../index.html">
+					<img src="../images/icons/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
           </a>
         </li>
         <li><a href="#">Stores</a></li>
@@ -49,15 +51,32 @@
         </li>
       </ul>
     </section>
+    <section class="title-header">
+      <h2>Our Range Of Beds</h2>
+    </section>
     <section class="product-page-options">
       <ul>
         <li>
           <img src="../images/photos/deconovo-gVKmonDbotU-unsplash.jpg" alt="bed">\
-          <button>Big Beds</button>
+          <a class="category-page-button" href="../product-listing-pages/beds-product-listing-page.html">Large Beds</a>
         </li>
         <li>
-          <img src="../images/photos/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="bed">\
-          <button>Big Beds</button>
+          <img src="../images/photos/adam-winger-nclN_J0UtJ8-unsplash.jpg" alt="bed">\
+          <button>Medium Beds</button>
+        </li>
+        <li>
+          <img src="../images/photos/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="bed">
+          <button>Small Beds</button>
+        </li>
+        <li>
+          <img src="../images/photos/gaelle-marcel-awYrEHKWEk4-unsplash.jpg" alt="bed">
+          <button>Wooden Beds</button>
+        </li>        <li>
+          <img src="../images/photos/greg-rivers-YeP1MUZDSsE-unsplash.jpg" alt="bed">
+          <button>Fold-Out Beds</button>
+        </li>        <li>
+          <img src="../images/photos/priscilla-du-preez-LpZMZXXpRcM-unsplash.jpg" alt="bed">
+          <button>Custom Beds</button>
         </li>
       </ul>
     </section>
