--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <ul>
         <li>
-          <a href="">
+          <a href="./index.html">
             <img src="images/icons/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
           </a>
         </li>
