worked on product listing page

--- a/product-listing-pages/beds-product-listing-page.html
+++ b/product-listing-pages/beds-product-listing-page.html
@@ -4,11 +4,11 @@
     <title>Treecreeper Testing Site</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="images/iconmonstr-circle-1-240 (1) (1).png" />
+    <link rel="icon" href="../images/icons/iconmonstr-circle-1-240 (1) (1).png" />
     <link rel="stylesheet" href="../style.css" />
   </head>
-  <body>
-    <nav>
+  <body id="listing-body">
+    <nav class="listing-nav">
       <ul>
         <li>
           <a href="../index.html">
@@ -21,7 +21,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-    <section class="products-nav">
+    <section class="listing-products-nav products-nav">
       <ul>
         <li>
           <a href="/category-pages/bedroom-category-page.html">
@@ -50,12 +50,20 @@
         </li>
       </ul>
     </section>
-    <section class="breadcrumbs"></section>
-    <section class="product-listing-title-section"><
-      <h2>Big Beds</h2></section>
-    <section class="filters-section"></section>
-    <section class="product-listing-section"></section>
-    <footer class="socials-footer">
+    <section class="breadcrumbs">
+      <ul>
+        <li>Home</li>
+        <li>Bedroom</li>
+        <li>Big Beds</li>
+      </ul>
+    </section>
+    <section class="product-listing-section">
+      <h2>Big Beds</h2>
+    </section>
+    <section class="filters-section">
+      <h2>Filters</h2>
+    </section>
+    <footer class="listing-socials-footer socials-footer">
       <ul>
         <li><a href="">Instagram</a></li>
         <li><a href="">Facebook</a></li>
