Added filters for product listing page

--- a/product-listing-pages/beds-product-listing-page.html
+++ b/product-listing-pages/beds-product-listing-page.html
@@ -52,9 +52,17 @@
     </section>
     <section class="breadcrumbs">
       <ul>
-        <li>Home</li>
-        <li>Bedroom</li>
-        <li>Big Beds</li>
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li><p>></p></li>
+        <li>
+          <a href="#">Bedroom</a>
+        </li>
+        <li><p>></p></li>
+        <li>
+          <p>Large Beds</p>
+        </li>
       </ul>
     </section>
     <section class="product-listing-section">
@@ -62,6 +70,17 @@
     </section>
     <section class="filters-section">
       <h2>Filters</h2>
+      <hr>
+      <h2>Brand</h2>
+      <hr>
+      <h2>Price</h2>
+      <hr>
+      <h2>Rating</h2>
+      <hr>
+      <h2>Color</h2>
+      <hr>
+      <h2>Type</h2>
+      <hr>
     </section>
     <footer class="listing-socials-footer socials-footer">
       <ul>
