worked on filters for product listing page

--- a/product-listing-pages/beds-product-listing-page.html
+++ b/product-listing-pages/beds-product-listing-page.html
@@ -69,9 +69,25 @@
       <h2>Big Beds</h2>
     </section>
     <section class="filters-section">
-      <h2>Filters</h2>
+      <h2 id="filters-title">Filters</h2>
       <hr>
       <h2>Brand</h2>
+      <section class="filter-option">
+        <input type="checkbox" id="warmwear" name="warmwear">
+        <label for="warmwear">WarmWear</label>
+      </section>
+      <section class="filter-option">
+        <input type="checkbox" id="coolcalm" name="coolcalm">
+        <label for="coolcalm">CoolCalm</label>
+      </section>
+      <section class="filter-option">
+        <input type="checkbox" id="sweetsoft" name="sweetsoft">
+        <label for="sweetsoft">SweetSoft</label>
+      </section>
+      <section class="filter-option">
+        <input type="checkbox" id="blissbeds" name="blissbeds">
+        <label for="blissbeds">BlissBeds</label>
+      </section>
       <hr>
       <h2>Price</h2>
       <hr>
