--- a/category-pages/bedroom-category-page.html
+++ b/category-pages/bedroom-category-page.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../style.css">
+  <link rel="icon" href="../images/icons/iconmonstr-circle-1-240 (1) (1).png">
 	<title>Treecreeper Test Website | Category Page</title>
 </head>
 
