worked on filters

--- a/product-listing-pages/beds-product-listing-page.html
+++ b/product-listing-pages/beds-product-listing-page.html
@@ -4,7 +4,10 @@
     <title>Treecreeper Testing Site</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="../images/icons/iconmonstr-circle-1-240 (1) (1).png" />
+    <link
+      rel="icon"
+      href="../images/icons/iconmonstr-circle-1-240 (1) (1).png"
+    />
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body id="listing-body">
@@ -12,7 +15,10 @@
       <ul>
         <li>
           <a href="../index.html">
-            <img src="../images/icons/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
+            <img
+              src="../images/icons/iconmonstr-circle-1-240 (1) (1).png"
+              alt="Logo"
+            />
           </a>
         </li>
         <li><a href="#">Stores</a></li>
@@ -24,29 +30,19 @@
     <section class="listing-products-nav products-nav">
       <ul>
         <li>
-          <a href="/category-pages/bedroom-category-page.html">
-            Bedroom
-          </a>
+          <a href="/category-pages/bedroom-category-page.html"> Bedroom </a>
         </li>
         <li>
-          <a href="">
-            Kitchen
-          </a>
+          <a href=""> Kitchen </a>
         </li>
         <li>
-          <a href="">
-            Garden
-          </a>
+          <a href=""> Garden </a>
         </li>
         <li>
-          <a href="">
-            DIY
-          </a>
+          <a href=""> DIY </a>
         </li>
         <li>
-          <a href="">
-            Electronics
-          </a>
+          <a href=""> Electronics </a>
         </li>
       </ul>
     </section>
@@ -70,33 +66,49 @@
     </section>
     <section class="filters-section">
       <h2 id="filters-title">Filters</h2>
-      <hr>
+      <hr />
       <h2>Brand</h2>
       <section class="filter-option">
-        <input type="checkbox" id="warmwear" name="warmwear">
+        <input type="checkbox" id="warmwear" name="warmwear" />
         <label for="warmwear">WarmWear</label>
       </section>
       <section class="filter-option">
-        <input type="checkbox" id="coolcalm" name="coolcalm">
+        <input type="checkbox" id="coolcalm" name="coolcalm" />
         <label for="coolcalm">CoolCalm</label>
       </section>
       <section class="filter-option">
-        <input type="checkbox" id="sweetsoft" name="sweetsoft">
+        <input type="checkbox" id="sweetsoft" name="sweetsoft" />
         <label for="sweetsoft">SweetSoft</label>
       </section>
       <section class="filter-option">
-        <input type="checkbox" id="blissbeds" name="blissbeds">
+        <input type="checkbox" id="blissbeds" name="blissbeds" />
         <label for="blissbeds">BlissBeds</label>
       </section>
-      <hr>
+      <hr />
       <h2>Price</h2>
-      <hr>
+      <section class="filter-option">
+        <input type="checkbox" id="under-200" name="under-200" />
+        <label for="under-200">< £200</label>
+      </section>
+      <section class="filter-option">
+        <input type="checkbox" id="" name="200-350" />
+        <label for="200-350">£200-350</label>
+      </section>
+      <section class="filter-option">
+        <input type="checkbox" id="350-500" name="350-500" />
+        <label for="350-500">£350-500</label>
+      </section>
+      <section class="filter-option">
+        <input type="checkbox" id="over-500" name="over-500" />
+        <label for="over-500">£500+</label>
+      </section>
+      <hr />
       <h2>Rating</h2>
-      <hr>
+      <hr />
       <h2>Color</h2>
-      <hr>
+      <hr />
       <h2>Type</h2>
-      <hr>
+      <hr />
     </section>
     <footer class="listing-socials-footer socials-footer">
       <ul>
