added images, worked on product listing page structure

--- a/product-listing-pages/beds-product-listing-page.html
+++ b/product-listing-pages/beds-product-listing-page.html
@@ -30,7 +30,9 @@
     <section class="listing-products-nav products-nav">
       <ul>
         <li>
-          <a href="/category-pages/bedroom-category-page.html"> Bedroom </a>
+          <a href="/product-listing-pages/bedroom-product-listing-page.html">
+            Bedroom
+          </a>
         </li>
         <li>
           <a href=""> Kitchen </a>
@@ -49,11 +51,13 @@
     <section class="breadcrumbs">
       <ul>
         <li>
-          <a href="#">Home</a>
+          <a href="../index.html">Home</a>
         </li>
         <li><p>></p></li>
         <li>
-          <a href="#">Bedroom</a>
+          <a href="../product-listing-pages/bedroom-product-listing-page.html"
+            >Bedroom</a
+          >
         </li>
         <li><p>></p></li>
         <li>
@@ -63,6 +67,50 @@
     </section>
     <section class="product-listing-section">
       <h2>Big Beds</h2>
+      <ul>
+        <li>
+          <img
+            src="../images/photos/beazy-5AwCzQganE8-unsplash.jpg"
+            alt="bed"
+          />
+          <a class="product-listing-page-button" href="">Oak Bed</a>
+        </li>
+        <li>
+          <img
+            src="../images/photos/erik-mclean-Ij9nIghkI6k-unsplash.jpg"
+            alt="bed"
+          />
+          <a class="product-listing-page-button" href="">Modern Bed</a>
+        </li>
+        <li>
+          <img
+            src="../images/photos/gus-tu-njana-8JPrzRRY4m8-unsplash.jpg"
+            alt="bed"
+          />
+          <a class="product-listing-page-button" href="">Low-Profile Bed</a>
+        </li>
+        <li>
+          <img
+            src="../images/photos/luisa-brimble-eXlNXI0LfMM-unsplash.jpg"
+            alt="bed"
+          />
+          <a class="product-listing-page-button" href="">Minimal Bed</a>
+        </li>
+        <li>
+          <img
+            src="../images/photos/spacejoy-EAri64dQlF4-unsplash.jpg"
+            alt="bed"
+          />
+          <a class="product-listing-page-button" href="">Exotic Bed</a>
+        </li>
+        <li>
+          <img
+            src="../images/photos/olena-sergienko-G-mDqDaM8mM-unsplash.jpg"
+            alt="bed"
+          />
+          <a class="product-listing-page-button" href="">Drawer Bed</a>
+        </li>
+      </ul>
     </section>
     <section class="filters-section">
       <h2 id="filters-title">Filters</h2>
@@ -104,11 +152,32 @@
       </section>
       <hr />
       <h2>Rating</h2>
+      <section class="filter-option">
+        <input type="checkbox" id="5-star" name="5-star" />
+        <label for="5-star">5 Star</label>
+      </section>
+      <section class="filter-option">
+        <input type="checkbox" id="4-star" name="4-star" />
+        <label for="4-star">4 Star</label>
+      </section>
+      <section class="filter-option">
+        <input type="checkbox" id="3-star" name="3-star" />
+        <label for="3-star">3 Star & Under</label>
+      </section>
       <hr />
       <h2>Color</h2>
-      <hr />
-      <h2>Type</h2>
-      <hr />
+      <section class="filter-option">
+        <input type="checkbox" id="Beige" name="Beige" />
+        <label for="Beige">Beige</label>
+      </section>
+      <section class="filter-option">
+        <input type="checkbox" id="Brown" name="Brown" />
+        <label for="Brown">Brown</label>
+      </section>
+      <section class="filter-option">
+        <input type="checkbox" id="other" name="other" />
+        <label for="other">Other</label>
+      </section>
     </section>
     <footer class="listing-socials-footer socials-footer">
       <ul>
