--- a/category-pages/bedroom-category-page.html
+++ b/category-pages/bedroom-category-page.html
@@ -59,25 +59,25 @@
       <ul>
         <li>
           <img src="../images/photos/deconovo-gVKmonDbotU-unsplash.jpg" alt="bed">\
-          <a class="category-page-button" href="../product-listing-pages/beds-product-listing-page.html">Large Beds</a>
+          <a class="category-page-button" href="../product-listing-pages/beds-product-listing-page.html">Small Beds</a>
         </li>
         <li>
           <img src="../images/photos/adam-winger-nclN_J0UtJ8-unsplash.jpg" alt="bed">\
-          <button>Medium Beds</button>
+          <a class="category-page-button" href="../product-listing-pages/beds-product-listing-page.html">Medium Beds</a>
         </li>
         <li>
           <img src="../images/photos/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="bed">
-          <button>Small Beds</button>
+           <a class="category-page-button" href="../product-listing-pages/beds-product-listing-page.html">Large Beds</a>
         </li>
         <li>
           <img src="../images/photos/gaelle-marcel-awYrEHKWEk4-unsplash.jpg" alt="bed">
-          <button>Wooden Beds</button>
+           <a class="category-page-button" href="../product-listing-pages/beds-product-listing-page.html">Futons</a>
         </li>        <li>
           <img src="../images/photos/greg-rivers-YeP1MUZDSsE-unsplash.jpg" alt="bed">
-          <button>Fold-Out Beds</button>
+           <a class="category-page-button" href="../product-listing-pages/beds-product-listing-page.html">Classic Beds</a>
         </li>        <li>
           <img src="../images/photos/priscilla-du-preez-LpZMZXXpRcM-unsplash.jpg" alt="bed">
-          <button>Custom Beds</button>
+           <a class="category-page-button" href="../product-listing-pages/beds-product-listing-page.html">Custom Beds</a>
         </li>
       </ul>
     </section>
