finished product listing page, started product page

--- a/product-listing-pages/beds-product-listing-page.html
+++ b/product-listing-pages/beds-product-listing-page.html
@@ -30,9 +30,7 @@
     <section class="listing-products-nav products-nav">
       <ul>
         <li>
-          <a href="/product-listing-pages/bedroom-product-listing-page.html">
-            Bedroom
-          </a>
+          <a href="../category-pages/bedroom-category-page.html"> Bedroom </a>
         </li>
         <li>
           <a href=""> Kitchen </a>
@@ -55,9 +53,7 @@
         </li>
         <li><p>></p></li>
         <li>
-          <a href="../product-listing-pages/bedroom-product-listing-page.html"
-            >Bedroom</a
-          >
+          <a href="../category-pages/bedroom-category-page.html">Bedroom</a>
         </li>
         <li><p>></p></li>
         <li>
@@ -67,13 +63,18 @@
     </section>
     <section class="product-listing-section">
       <h2>Big Beds</h2>
+      <hr />
       <ul>
         <li>
           <img
             src="../images/photos/beazy-5AwCzQganE8-unsplash.jpg"
             alt="bed"
           />
-          <a class="product-listing-page-button" href="">Oak Bed</a>
+          <a
+            class="product-listing-page-button"
+            href="../product-pages/oak-bed-product-page.html"
+            >Oak Bed</a
+          >
         </li>
         <li>
           <img
@@ -87,7 +88,7 @@
             src="../images/photos/gus-tu-njana-8JPrzRRY4m8-unsplash.jpg"
             alt="bed"
           />
-          <a class="product-listing-page-button" href="">Low-Profile Bed</a>
+          <a class="product-listing-page-button" href="">Low-Profile</a>
         </li>
         <li>
           <img
