worked on page details e.g. title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Treecreeper Testing Site</title>
+    <title>Treecreeper Testing Site | Home</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="images/icons/iconmonstr-circle-1-240 (1) (1).png" />
@@ -12,7 +12,10 @@
       <ul>
         <li>
           <a href="./index.html">
-            <img src="images/icons/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
+            <img
+              src="images/icons/iconmonstr-circle-1-240 (1) (1).png"
+              alt="Logo"
+            />
           </a>
         </li>
         <li><a href="#">Stores</a></li>
@@ -24,29 +27,19 @@
     <section class="products-nav">
       <ul>
         <li>
-          <a href="/category-pages/bedroom-category-page.html">
-            Bedroom
-          </a>
+          <a href="/category-pages/bedroom-category-page.html"> Bedroom </a>
         </li>
         <li>
-          <a href="">
-            Kitchen
-          </a>
+          <a href=""> Kitchen </a>
         </li>
         <li>
-          <a href="">
-            Garden
-          </a>
+          <a href=""> Garden </a>
         </li>
         <li>
-          <a href="">
-            DIY
-          </a>
+          <a href=""> DIY </a>
         </li>
         <li>
-          <a href="">
-            Electronics
-          </a>
+          <a href=""> Electronics </a>
         </li>
       </ul>
     </section>
