--- a/product-listing-pages/beds-product-listing-page.html
+++ b/product-listing-pages/beds-product-listing-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Treecreeper Testing Site</title>
+    <title>Treecreeper Testing Site | Product Listing Page</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -62,7 +62,7 @@
       </ul>
     </section>
     <section class="product-listing-section">
-      <h2>Big Beds</h2>
+      <h2>Large Beds</h2>
       <hr />
       <ul>
         <li>
