--- a/product-pages/oak-bed-product-page.html
+++ b/product-pages/oak-bed-product-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Treecreeper Testing Site</title>
+    <title>Treecreeper Testing Site | Product Page</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -57,10 +57,15 @@
         </li>
         <li><p>></p></li>
         <li>
-          <p>Large Beds</p>
+          <a href="../product-listing-pages/beds-product-listing-page.html"
+            >Large Beds</a
+          >
         </li>
+        <li><p>></p></li>
+        <li><p>Oak Bed</p></li>
       </ul>
     </section>
+
     <footer class="listing-socials-footer socials-footer">
       <ul>
         <li><a href="">Instagram</a></li>
