finished product listing page

--- a/product-listing-pages/beds-product-listing-page.html
+++ b/product-listing-pages/beds-product-listing-page.html
@@ -46,16 +46,20 @@
         </li>
       </ul>
     </section>
-    <section class="breadcrumbs">
+    <section class="product-listing-breadcrumbs">
       <ul>
         <li>
           <a href="../index.html">Home</a>
         </li>
-        <li><p>></p></li>
+        <li>
+          <p>></p>
+        </li>
         <li>
           <a href="../category-pages/bedroom-category-page.html">Bedroom</a>
         </li>
-        <li><p>></p></li>
+        <li>
+          <p>></p>
+        </li>
         <li>
           <p>Large Beds</p>
         </li>
