--- a/product-pages/oak-bed-product-page.html
+++ b/product-pages/oak-bed-product-page.html
@@ -10,8 +10,8 @@
     />
     <link rel="stylesheet" href="../style.css" />
   </head>
-  <body id="listing-body">
-    <nav class="listing-nav">
+  <body>
+    <nav>
       <ul>
         <li>
           <a href="../index.html">
@@ -27,7 +27,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-    <section class="listing-products-nav products-nav">
+    <section class="products-nav">
       <ul>
         <li>
           <a href="../category-pages/bedroom-category-page.html"> Bedroom </a>
@@ -46,27 +46,54 @@
         </li>
       </ul>
     </section>
-    <section class="breadcrumbs">
+    <section class="product-page-breadcrumbs">
       <ul>
         <li>
           <a href="../index.html">Home</a>
         </li>
-        <li><p>></p></li>
+        <li>
+          <p>></p>
+        </li>
         <li>
           <a href="../category-pages/bedroom-category-page.html">Bedroom</a>
         </li>
-        <li><p>></p></li>
+        <li>
+          <p>></p>
+        </li>
         <li>
           <a href="../product-listing-pages/beds-product-listing-page.html"
             >Large Beds</a
           >
         </li>
-        <li><p>></p></li>
-        <li><p>Oak Bed</p></li>
+        <li>
+          <p>></p>
+        </li>
+        <li>
+          <p>Oak Bed</p>
+        </li>
       </ul>
     </section>
-
-    <footer class="listing-socials-footer socials-footer">
+    <section class="product-description">
+      <img
+        src="../images/photos/beazy-5AwCzQganE8-unsplash.jpg"
+        alt="oak-bed"
+      />
+      <h2>Oak Bed</h2>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi
+        reiciendis rem officia soluta laudantium fugit illo tenetur illum, nemo
+        veritatis doloribus ut optio corrupti vero consequatur, sed eos
+        delectus, recusandae molestias. Enim quaerat obcaecati odio, expedita
+        illo blanditiis recusandae quod nostrum explicabo temporibus fugit, quia
+        hic, ducimus odit nesciunt officiis libero! Beatae magnam quaerat quidem
+        nihil. Unde soluta perferendis incidunt ex quia nisi dolore consequuntur
+        facilis modi! Adipisci eaque et sequi nesciunt quasi sint id quibusdam,
+        rem impedit suscipit consectetur repellat illum facilis vel dolore
+        recusandae eos pariatur blanditiis?
+      </p>
+      <a class="product-description-button" href="">Add to Cart</a>
+    </section>
+    <footer class="socials-footer">
       <ul>
         <li><a href="">Instagram</a></li>
         <li><a href="">Facebook</a></li>
