--- a/category-pages/bedroom-category-page.html
+++ b/category-pages/bedroom-category-page.html
@@ -17,36 +17,36 @@
 					<img src="../images/icons/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
           </a>
         </li>
-        <li><a href="#">Stores</a></li>
-        <li><a href="#">Ideas & Advice</a></li>
-        <li><a href="#">Basket</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="../index.html">Stores</a></li>
+        <li><a href="../index.html">Ideas & Advice</a></li>
+        <li><a href="../index.html">Basket</a></li>
+        <li><a href="../index.html">Contact</a></li>
       </ul>
     </nav id="home-nav">
     <section class="products-nav">
       <ul>
         <li>
-          <a href="/category-pages/bedroom-category-page.html">
+          <a href="../category-pages/bedroom-category-page.html">
             Bedroom
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="../category-pages/bedroom-category-page.html">
             Kitchen
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="../category-pages/bedroom-category-page.html">
             Garden
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="../category-pages/bedroom-category-page.html">
             DIY
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="../category-pages/bedroom-category-page.html">
             Electronics
           </a>
         </li>
@@ -54,6 +54,7 @@
     </section>
     <section class="title-header">
       <h2>Our Range Of Beds</h2>
+      <hr>
     </section>
     <section class="product-page-options">
       <ul>
@@ -83,10 +84,10 @@
     </section>
     <footer class="socials-footer">
   <ul>
-    <li><a href="">Instagram</a></li>
-    <li><a href="">Facebook</a></li>
-    <li><a href="">Twitter</a></li>
-    <li><a href="">Email</a></li>
+    <li><a href="../index.html">Instagram</a></li>
+    <li><a href="../index.html">Facebook</a></li>
+    <li><a href="../index.html">Twitter</a></li>
+    <li><a href="../index.html">Email</a></li>
   </ul>
 </footer>
 </body>
