--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <nav>
       <ul>
         <li>
-          <a href="./index.html">
+          <a href="/index.html">
             <img
               src="images/icons/iconmonstr-circle-1-240 (1) (1).png"
               alt="Logo"
             />
           </a>
         </li>
-        <li><a href="#">Stores</a></li>
-        <li><a href="#">Ideas & Advice</a></li>
-        <li><a href="#">Basket</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="/index.html">Stores</a></li>
+        <li><a href="/index.html">Ideas & Advice</a></li>
+        <li><a href="/index.html">Basket</a></li>
+        <li><a href="/index.html">Contact</a></li>
       </ul>
     </nav>
     <section class="products-nav">
@@ -30,16 +30,16 @@
           <a href="/category-pages/bedroom-category-page.html"> Bedroom </a>
         </li>
         <li>
-          <a href=""> Kitchen </a>
+          <a href="/category-pages/bedroom-category-page.html"> Kitchen </a>
         </li>
         <li>
-          <a href=""> Garden </a>
+          <a href="/category-pages/bedroom-category-page.html"> Garden </a>
         </li>
         <li>
-          <a href=""> DIY </a>
+          <a href="/category-pages/bedroom-category-page.html"> DIY </a>
         </li>
         <li>
-          <a href=""> Electronics </a>
+          <a href="/category-pages/bedroom-category-page.html"> Electronics </a>
         </li>
       </ul>
     </section>
