--- a/product-listing-pages/beds-product-listing-page.html
+++ b/product-listing-pages/beds-product-listing-page.html
@@ -21,10 +21,10 @@
             />
           </a>
         </li>
-        <li><a href="#">Stores</a></li>
-        <li><a href="#">Ideas & Advice</a></li>
-        <li><a href="#">Basket</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="../index.html">Stores</a></li>
+        <li><a href="../index.html">Ideas & Advice</a></li>
+        <li><a href="../index.html">Basket</a></li>
+        <li><a href="../index.html">Contact</a></li>
       </ul>
     </nav>
     <section class="listing-products-nav products-nav">
@@ -33,16 +33,18 @@
           <a href="../category-pages/bedroom-category-page.html"> Bedroom </a>
         </li>
         <li>
-          <a href=""> Kitchen </a>
+          <a href="../category-pages/bedroom-category-page.html"> Kitchen </a>
         </li>
         <li>
-          <a href=""> Garden </a>
+          <a href="../category-pages/bedroom-category-page.html"> Garden </a>
         </li>
         <li>
-          <a href=""> DIY </a>
+          <a href="../category-pages/bedroom-category-page.html"> DIY </a>
         </li>
         <li>
-          <a href=""> Electronics </a>
+          <a href="../category-pages/bedroom-category-page.html">
+            Electronics
+          </a>
         </li>
       </ul>
     </section>
@@ -85,35 +87,55 @@
             src="../images/photos/erik-mclean-Ij9nIghkI6k-unsplash.jpg"
             alt="bed"
           />
-          <a class="product-listing-page-button" href="">Modern Bed</a>
+          <a
+            class="product-listing-page-button"
+            href="../product-pages/oak-bed-product-page.html"
+            >Modern Bed</a
+          >
         </li>
         <li>
           <img
             src="../images/photos/gus-tu-njana-8JPrzRRY4m8-unsplash.jpg"
             alt="bed"
           />
-          <a class="product-listing-page-button" href="">Low-Profile</a>
+          <a
+            class="product-listing-page-button"
+            href="../product-pages/oak-bed-product-page.html"
+            >Low-Profile</a
+          >
         </li>
         <li>
           <img
             src="../images/photos/luisa-brimble-eXlNXI0LfMM-unsplash.jpg"
             alt="bed"
           />
-          <a class="product-listing-page-button" href="">Minimal Bed</a>
+          <a
+            class="product-listing-page-button"
+            href="../product-pages/oak-bed-product-page.html"
+            >Minimal Bed</a
+          >
         </li>
         <li>
           <img
             src="../images/photos/spacejoy-EAri64dQlF4-unsplash.jpg"
             alt="bed"
           />
-          <a class="product-listing-page-button" href="">Exotic Bed</a>
+          <a
+            class="product-listing-page-button"
+            href="../product-pages/oak-bed-product-page.html"
+            >Exotic Bed</a
+          >
         </li>
         <li>
           <img
             src="../images/photos/olena-sergienko-G-mDqDaM8mM-unsplash.jpg"
             alt="bed"
           />
-          <a class="product-listing-page-button" href="">Drawer Bed</a>
+          <a
+            class="product-listing-page-button"
+            href="../product-pages/oak-bed-product-page.html"
+            >Drawer Bed</a
+          >
         </li>
       </ul>
     </section>
@@ -186,10 +208,10 @@
     </section>
     <footer class="listing-socials-footer socials-footer">
       <ul>
-        <li><a href="">Instagram</a></li>
-        <li><a href="">Facebook</a></li>
-        <li><a href="">Twitter</a></li>
-        <li><a href="">Email</a></li>
+        <li><a href="../index.html">Instagram</a></li>
+        <li><a href="../index.html">Facebook</a></li>
+        <li><a href="../index.html">Twitter</a></li>
+        <li><a href="../index.html">Email</a></li>
       </ul>
     </footer>
   </body>
