--- a/product-pages/oak-bed-product-page.html
+++ b/product-pages/oak-bed-product-page.html
@@ -21,10 +21,10 @@
             />
           </a>
         </li>
-        <li><a href="#">Stores</a></li>
-        <li><a href="#">Ideas & Advice</a></li>
-        <li><a href="#">Basket</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="../index.html">Stores</a></li>
+        <li><a href="../index.html">Ideas & Advice</a></li>
+        <li><a href="../index.html">Basket</a></li>
+        <li><a href="../index.html">Contact</a></li>
       </ul>
     </nav>
     <section class="products-nav">
@@ -33,16 +33,18 @@
           <a href="../category-pages/bedroom-category-page.html"> Bedroom </a>
         </li>
         <li>
-          <a href=""> Kitchen </a>
+          <a href="../category-pages/bedroom-category-page.html"> Kitchen </a>
         </li>
         <li>
-          <a href=""> Garden </a>
+          <a href="../category-pages/bedroom-category-page.html"> Garden </a>
         </li>
         <li>
-          <a href=""> DIY </a>
+          <a href="../category-pages/bedroom-category-page.html"> DIY </a>
         </li>
         <li>
-          <a href=""> Electronics </a>
+          <a href="../category-pages/bedroom-category-page.html">
+            Electronics
+          </a>
         </li>
       </ul>
     </section>
@@ -95,10 +97,10 @@
     </section>
     <footer class="socials-footer">
       <ul>
-        <li><a href="">Instagram</a></li>
-        <li><a href="">Facebook</a></li>
-        <li><a href="">Twitter</a></li>
-        <li><a href="">Email</a></li>
+        <li><a href="../index.html">Instagram</a></li>
+        <li><a href="../index.html">Facebook</a></li>
+        <li><a href="../index.html">Twitter</a></li>
+        <li><a href="../index.html">Email</a></li>
       </ul>
     </footer>
   </body>
