--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </article>
     <footer class="socials-footer">
       <ul>
-        <li><a href="">Instagram</a></li>
+        <li><a href="index.html">Instagram</a></li>
         <li><a href="">Facebook</a></li>
         <li><a href="">Twitter</a></li>
         <li><a href="">Email</a></li>
