--- a/index.html
+++ b/index.html
@@ -11,35 +11,35 @@
     <nav>
       <ul>
         <li>
-          <a href="/index.html">
+          <a href="index.html">
             <img
               src="images/icons/iconmonstr-circle-1-240 (1) (1).png"
               alt="Logo"
             />
           </a>
         </li>
-        <li><a href="/index.html">Stores</a></li>
-        <li><a href="/index.html">Ideas & Advice</a></li>
-        <li><a href="/index.html">Basket</a></li>
-        <li><a href="/index.html">Contact</a></li>
+        <li><a href="index.html">Stores</a></li>
+        <li><a href="index.html">Ideas & Advice</a></li>
+        <li><a href="index.html">Basket</a></li>
+        <li><a href="index.html">Contact</a></li>
       </ul>
     </nav>
     <section class="products-nav">
       <ul>
         <li>
-          <a href="/category-pages/bedroom-category-page.html"> Bedroom </a>
+          <a href="category-pages/bedroom-category-page.html"> Bedroom </a>
         </li>
         <li>
-          <a href="/category-pages/bedroom-category-page.html"> Kitchen </a>
+          <a href="category-pages/bedroom-category-page.html"> Kitchen </a>
         </li>
         <li>
-          <a href="/category-pages/bedroom-category-page.html"> Garden </a>
+          <a href="category-pages/bedroom-category-page.html"> Garden </a>
         </li>
         <li>
-          <a href="/category-pages/bedroom-category-page.html"> DIY </a>
+          <a href="category-pages/bedroom-category-page.html"> DIY </a>
         </li>
         <li>
-          <a href="/category-pages/bedroom-category-page.html"> Electronics </a>
+          <a href="category-pages/bedroom-category-page.html"> Electronics </a>
         </li>
       </ul>
     </section>
@@ -158,9 +158,9 @@
     <footer class="socials-footer">
       <ul>
         <li><a href="index.html">Instagram</a></li>
-        <li><a href="">Facebook</a></li>
-        <li><a href="">Twitter</a></li>
-        <li><a href="">Email</a></li>
+        <li><a href="index.html">Facebook</a></li>
+        <li><a href="index.html">Twitter</a></li>
+        <li><a href="index.html">Email</a></li>
       </ul>
     </footer>
   </body>
