--- a/bedroom-category-page.html
+++ b/bedroom-category-page.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../style.css">
-  <link rel="icon" href="../images/icons/iconmonstr-circle-1-240 (1) (1).png">
+	<link rel="stylesheet" href="style.css">
+  <link rel="icon" href="images/icons/iconmonstr-circle-1-240 (1) (1).png">
 	<title>Treecreeper Test Website | Category Page</title>
 </head>
 
@@ -13,40 +13,40 @@
 	<nav>
 		<ul>
 			<li>
-				<a href="../index.html">
-					<img src="../images/icons/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
+				<a href="index.html">
+					<img src="images/icons/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
           </a>
         </li>
-        <li><a href="../index.html">Stores</a></li>
-        <li><a href="../index.html">Ideas & Advice</a></li>
-        <li><a href="../index.html">Basket</a></li>
-        <li><a href="../index.html">Contact</a></li>
+        <li><a href="index.html">Stores</a></li>
+        <li><a href="index.html">Ideas & Advice</a></li>
+        <li><a href="index.html">Basket</a></li>
+        <li><a href="index.html">Contact</a></li>
       </ul>
     </nav id="home-nav">
     <section class="products-nav">
       <ul>
         <li>
-          <a href="../category-pages/bedroom-category-page.html">
+          <a href="category-pages/bedroom-category-page.html">
             Bedroom
           </a>
         </li>
         <li>
-          <a href="../category-pages/bedroom-category-page.html">
+          <a href="category-pages/bedroom-category-page.html">
             Kitchen
           </a>
         </li>
         <li>
-          <a href="../category-pages/bedroom-category-page.html">
+          <a href="category-pages/bedroom-category-page.html">
             Garden
           </a>
         </li>
         <li>
-          <a href="../category-pages/bedroom-category-page.html">
+          <a href="category-pages/bedroom-category-page.html">
             DIY
           </a>
         </li>
         <li>
-          <a href="../category-pages/bedroom-category-page.html">
+          <a href="category-pages/bedroom-category-page.html">
             Electronics
           </a>
         </li>
@@ -59,35 +59,35 @@
     <section class="product-page-options">
       <ul>
         <li>
-          <img src="../images/photos/deconovo-gVKmonDbotU-unsplash.jpg" alt="bed">\
-          <a class="category-page-button" href="../product-listing-pages/beds-product-listing-page.html">Small Beds</a>
+          <img src="images/photos/deconovo-gVKmonDbotU-unsplash.jpg" alt="bed">\
+          <a class="category-page-button" href="product-listing-pages/beds-product-listing-page.html">Small Beds</a>
         </li>
         <li>
-          <img src="../images/photos/adam-winger-nclN_J0UtJ8-unsplash.jpg" alt="bed">\
-          <a class="category-page-button" href="../product-listing-pages/beds-product-listing-page.html">Medium Beds</a>
+          <img src="images/photos/adam-winger-nclN_J0UtJ8-unsplash.jpg" alt="bed">\
+          <a class="category-page-button" href="product-listing-pages/beds-product-listing-page.html">Medium Beds</a>
         </li>
         <li>
-          <img src="../images/photos/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="bed">
-           <a class="category-page-button" href="../product-listing-pages/beds-product-listing-page.html">Large Beds</a>
+          <img src="images/photos/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="bed">
+           <a class="category-page-button" href="product-listing-pages/beds-product-listing-page.html">Large Beds</a>
         </li>
         <li>
-          <img src="../images/photos/gaelle-marcel-awYrEHKWEk4-unsplash.jpg" alt="bed">
-           <a class="category-page-button" href="../product-listing-pages/beds-product-listing-page.html">Futons</a>
+          <img src="images/photos/gaelle-marcel-awYrEHKWEk4-unsplash.jpg" alt="bed">
+           <a class="category-page-button" href="product-listing-pages/beds-product-listing-page.html">Futons</a>
         </li>        <li>
-          <img src="../images/photos/greg-rivers-YeP1MUZDSsE-unsplash.jpg" alt="bed">
-           <a class="category-page-button" href="../product-listing-pages/beds-product-listing-page.html">Classic Beds</a>
+          <img src="images/photos/greg-rivers-YeP1MUZDSsE-unsplash.jpg" alt="bed">
+           <a class="category-page-button" href="product-listing-pages/beds-product-listing-page.html">Classic Beds</a>
         </li>        <li>
-          <img src="../images/photos/priscilla-du-preez-LpZMZXXpRcM-unsplash.jpg" alt="bed">
-           <a class="category-page-button" href="../product-listing-pages/beds-product-listing-page.html">Custom Beds</a>
+          <img src="images/photos/priscilla-du-preez-LpZMZXXpRcM-unsplash.jpg" alt="bed">
+           <a class="category-page-button" href="product-listing-pages/beds-product-listing-page.html">Custom Beds</a>
         </li>
       </ul>
     </section>
     <footer class="socials-footer">
   <ul>
-    <li><a href="../index.html">Instagram</a></li>
-    <li><a href="../index.html">Facebook</a></li>
-    <li><a href="../index.html">Twitter</a></li>
-    <li><a href="../index.html">Email</a></li>
+    <li><a href="index.html">Instagram</a></li>
+    <li><a href="index.html">Facebook</a></li>
+    <li><a href="index.html">Twitter</a></li>
+    <li><a href="index.html">Email</a></li>
   </ul>
 </footer>
 </body>
