--- a/beds-product-listing-page.html
+++ b/beds-product-listing-page.html
@@ -4,60 +4,55 @@
     <title>Treecreeper Testing Site | Product Listing Page</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="icon"
-      href="../images/icons/iconmonstr-circle-1-240 (1) (1).png"
-    />
+    <link rel="icon" href="images/icons/iconmonstr-circle-1-240 (1) (1).png" />
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body id="listing-body">
     <nav class="listing-nav">
       <ul>
         <li>
-          <a href="../index.html">
+          <a href="index.html">
             <img
-              src="../images/icons/iconmonstr-circle-1-240 (1) (1).png"
+              src="images/icons/iconmonstr-circle-1-240 (1) (1).png"
               alt="Logo"
             />
           </a>
         </li>
-        <li><a href="../index.html">Stores</a></li>
-        <li><a href="../index.html">Ideas & Advice</a></li>
-        <li><a href="../index.html">Basket</a></li>
-        <li><a href="../index.html">Contact</a></li>
+        <li><a href="index.html">Stores</a></li>
+        <li><a href="index.html">Ideas & Advice</a></li>
+        <li><a href="index.html">Basket</a></li>
+        <li><a href="index.html">Contact</a></li>
       </ul>
     </nav>
     <section class="listing-products-nav products-nav">
       <ul>
         <li>
-          <a href="../category-pages/bedroom-category-page.html"> Bedroom </a>
+          <a href="category-pages/bedroom-category-page.html"> Bedroom </a>
         </li>
         <li>
-          <a href="../category-pages/bedroom-category-page.html"> Kitchen </a>
+          <a href="category-pages/bedroom-category-page.html"> Kitchen </a>
         </li>
         <li>
-          <a href="../category-pages/bedroom-category-page.html"> Garden </a>
+          <a href="category-pages/bedroom-category-page.html"> Garden </a>
         </li>
         <li>
-          <a href="../category-pages/bedroom-category-page.html"> DIY </a>
+          <a href="category-pages/bedroom-category-page.html"> DIY </a>
         </li>
         <li>
-          <a href="../category-pages/bedroom-category-page.html">
-            Electronics
-          </a>
+          <a href="category-pages/bedroom-category-page.html"> Electronics </a>
         </li>
       </ul>
     </section>
     <section class="product-listing-breadcrumbs">
       <ul>
         <li>
-          <a href="../index.html">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
           <p>></p>
         </li>
         <li>
-          <a href="../category-pages/bedroom-category-page.html">Bedroom</a>
+          <a href="category-pages/bedroom-category-page.html">Bedroom</a>
         </li>
         <li>
           <p>></p>
@@ -72,68 +67,65 @@
       <hr />
       <ul>
         <li>
-          <img
-            src="../images/photos/beazy-5AwCzQganE8-unsplash.jpg"
-            alt="bed"
-          />
+          <img src="images/photos/beazy-5AwCzQganE8-unsplash.jpg" alt="bed" />
           <a
             class="product-listing-page-button"
-            href="../product-pages/oak-bed-product-page.html"
+            href="oak-bed-product-page.html"
             >Oak Bed</a
           >
         </li>
         <li>
           <img
-            src="../images/photos/erik-mclean-Ij9nIghkI6k-unsplash.jpg"
+            src="images/photos/erik-mclean-Ij9nIghkI6k-unsplash.jpg"
             alt="bed"
           />
           <a
             class="product-listing-page-button"
-            href="../product-pages/oak-bed-product-page.html"
+            href="oak-bed-product-page.html"
             >Modern Bed</a
           >
         </li>
         <li>
           <img
-            src="../images/photos/gus-tu-njana-8JPrzRRY4m8-unsplash.jpg"
+            src="images/photos/gus-tu-njana-8JPrzRRY4m8-unsplash.jpg"
             alt="bed"
           />
           <a
             class="product-listing-page-button"
-            href="../product-pages/oak-bed-product-page.html"
+            href="oak-bed-product-page.html"
             >Low-Profile</a
           >
         </li>
         <li>
           <img
-            src="../images/photos/luisa-brimble-eXlNXI0LfMM-unsplash.jpg"
+            src="images/photos/luisa-brimble-eXlNXI0LfMM-unsplash.jpg"
             alt="bed"
           />
           <a
             class="product-listing-page-button"
-            href="../product-pages/oak-bed-product-page.html"
+            href="product-pages/oak-bed-product-page.html"
             >Minimal Bed</a
           >
         </li>
         <li>
           <img
-            src="../images/photos/spacejoy-EAri64dQlF4-unsplash.jpg"
+            src="images/photos/spacejoy-EAri64dQlF4-unsplash.jpg"
             alt="bed"
           />
           <a
             class="product-listing-page-button"
-            href="../product-pages/oak-bed-product-page.html"
+            href="oak-bed-product-page.html"
             >Exotic Bed</a
           >
         </li>
         <li>
           <img
-            src="../images/photos/olena-sergienko-G-mDqDaM8mM-unsplash.jpg"
+            src="images/photos/olena-sergienko-G-mDqDaM8mM-unsplash.jpg"
             alt="bed"
           />
           <a
             class="product-listing-page-button"
-            href="../product-pages/oak-bed-product-page.html"
+            href="oak-bed-product-page.html"
             >Drawer Bed</a
           >
         </li>
@@ -208,10 +200,10 @@
     </section>
     <footer class="listing-socials-footer socials-footer">
       <ul>
-        <li><a href="../index.html">Instagram</a></li>
-        <li><a href="../index.html">Facebook</a></li>
-        <li><a href="../index.html">Twitter</a></li>
-        <li><a href="../index.html">Email</a></li>
+        <li><a href="index.html">Instagram</a></li>
+        <li><a href="index.html">Facebook</a></li>
+        <li><a href="index.html">Twitter</a></li>
+        <li><a href="index.html">Email</a></li>
       </ul>
     </footer>
   </body>
