--- a/oak-bed-product-page.html
+++ b/oak-bed-product-page.html
@@ -4,66 +4,61 @@
     <title>Treecreeper Testing Site | Product Page</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="icon"
-      href="../images/icons/iconmonstr-circle-1-240 (1) (1).png"
-    />
+    <link rel="icon" href="images/icons/iconmonstr-circle-1-240 (1) (1).png" />
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <nav>
       <ul>
         <li>
-          <a href="../index.html">
+          <a href="index.html">
             <img
-              src="../images/icons/iconmonstr-circle-1-240 (1) (1).png"
+              src="images/icons/iconmonstr-circle-1-240 (1) (1).png"
               alt="Logo"
             />
           </a>
         </li>
-        <li><a href="../index.html">Stores</a></li>
-        <li><a href="../index.html">Ideas & Advice</a></li>
-        <li><a href="../index.html">Basket</a></li>
-        <li><a href="../index.html">Contact</a></li>
+        <li><a href="index.html">Stores</a></li>
+        <li><a href="index.html">Ideas & Advice</a></li>
+        <li><a href="index.html">Basket</a></li>
+        <li><a href="index.html">Contact</a></li>
       </ul>
     </nav>
     <section class="products-nav">
       <ul>
         <li>
-          <a href="../category-pages/bedroom-category-page.html"> Bedroom </a>
+          <a href="category-pages/bedroom-category-page.html"> Bedroom </a>
         </li>
         <li>
-          <a href="../category-pages/bedroom-category-page.html"> Kitchen </a>
+          <a href="category-pages/bedroom-category-page.html"> Kitchen </a>
         </li>
         <li>
-          <a href="../category-pages/bedroom-category-page.html"> Garden </a>
+          <a href="category-pages/bedroom-category-page.html"> Garden </a>
         </li>
         <li>
-          <a href="../category-pages/bedroom-category-page.html"> DIY </a>
+          <a href="category-pages/bedroom-category-page.html"> DIY </a>
         </li>
         <li>
-          <a href="../category-pages/bedroom-category-page.html">
-            Electronics
-          </a>
+          <a href="category-pages/bedroom-category-page.html"> Electronics </a>
         </li>
       </ul>
     </section>
     <section class="product-page-breadcrumbs">
       <ul>
         <li>
-          <a href="../index.html">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
           <p>></p>
         </li>
         <li>
-          <a href="../category-pages/bedroom-category-page.html">Bedroom</a>
+          <a href="category-pages/bedroom-category-page.html">Bedroom</a>
         </li>
         <li>
           <p>></p>
         </li>
         <li>
-          <a href="../product-listing-pages/beds-product-listing-page.html"
+          <a href="product-listing-pages/beds-product-listing-page.html"
             >Large Beds</a
           >
         </li>
@@ -76,10 +71,7 @@
       </ul>
     </section>
     <section class="product-description">
-      <img
-        src="../images/photos/beazy-5AwCzQganE8-unsplash.jpg"
-        alt="oak-bed"
-      />
+      <img src="images/photos/beazy-5AwCzQganE8-unsplash.jpg" alt="oak-bed" />
       <h2>Oak Bed</h2>
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi
@@ -97,10 +89,10 @@
     </section>
     <footer class="socials-footer">
       <ul>
-        <li><a href="../index.html">Instagram</a></li>
-        <li><a href="../index.html">Facebook</a></li>
-        <li><a href="../index.html">Twitter</a></li>
-        <li><a href="../index.html">Email</a></li>
+        <li><a href="index.html">Instagram</a></li>
+        <li><a href="index.html">Facebook</a></li>
+        <li><a href="index.html">Twitter</a></li>
+        <li><a href="index.html">Email</a></li>
       </ul>
     </footer>
   </body>
