--- a/bedroom-category-page.html
+++ b/bedroom-category-page.html
@@ -26,27 +26,27 @@
     <section class="products-nav">
       <ul>
         <li>
-          <a href="category-pages/bedroom-category-page.html">
+          <a href="bedroom-category-page.html">
             Bedroom
           </a>
         </li>
         <li>
-          <a href="category-pages/bedroom-category-page.html">
+          <a href="bedroom-category-page.html">
             Kitchen
           </a>
         </li>
         <li>
-          <a href="category-pages/bedroom-category-page.html">
+          <a href="bedroom-category-page.html">
             Garden
           </a>
         </li>
         <li>
-          <a href="category-pages/bedroom-category-page.html">
+          <a href="bedroom-category-page.html">
             DIY
           </a>
         </li>
         <li>
-          <a href="category-pages/bedroom-category-page.html">
+          <a href="bedroom-category-page.html">
             Electronics
           </a>
         </li>
