--- a/oak-bed-product-page.html
+++ b/oak-bed-product-page.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="images/icons/iconmonstr-circle-1-240 (1) (1).png" />
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
