--- a/beds-product-listing-page.html
+++ b/beds-product-listing-page.html
@@ -52,7 +52,7 @@
           <p>></p>
         </li>
         <li>
-          <a href="category-pages/bedroom-category-page.html">Bedroom</a>
+          <a href="bedroom-category-page.html">Bedroom</a>
         </li>
         <li>
           <p>></p>
