--- a/oak-bed-product-page.html
+++ b/oak-bed-product-page.html
@@ -27,19 +27,19 @@
     <section class="products-nav">
       <ul>
         <li>
-          <a href="category-pages/bedroom-category-page.html"> Bedroom </a>
+          <a href="bedroom-category-page.html"> Bedroom </a>
         </li>
         <li>
-          <a href="category-pages/bedroom-category-page.html"> Kitchen </a>
+          <a href="bedroom-category-page.html"> Kitchen </a>
         </li>
         <li>
-          <a href="category-pages/bedroom-category-page.html"> Garden </a>
+          <a href="bedroom-category-page.html"> Garden </a>
         </li>
         <li>
-          <a href="category-pages/bedroom-category-page.html"> DIY </a>
+          <a href="bedroom-category-page.html"> DIY </a>
         </li>
         <li>
-          <a href="category-pages/bedroom-category-page.html"> Electronics </a>
+          <a href="bedroom-category-page.html"> Electronics </a>
         </li>
       </ul>
     </section>
@@ -52,15 +52,13 @@
           <p>></p>
         </li>
         <li>
-          <a href="category-pages/bedroom-category-page.html">Bedroom</a>
+          <a href="bedroom-category-page.html">Bedroom</a>
         </li>
         <li>
           <p>></p>
         </li>
         <li>
-          <a href="product-listing-pages/beds-product-listing-page.html"
-            >Large Beds</a
-          >
+          <a href="beds-product-listing-page.html">Large Beds</a>
         </li>
         <li>
           <p>></p>
