added image section on home page

--- a/index.html
+++ b/index.html
@@ -71,33 +71,11 @@
         dolorem iure debitis.
       </p>
     </article>
-    <article class="fundraiser-article">
-      <h2>New Fundraiser</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nulla,
-        voluptates voluptatem assumenda recusandae labore sunt est vitae
-        veritatis explicabo, cumque soluta dicta? Corporis obcaecati hic
-        consectetur sunt culpa quae fugit tenetur quibusdam harum, assumenda
-        perspiciatis velit aliquam blanditiis ipsum voluptates delectus vitae
-        cum at nesciunt sint eveniet? Illo maxime pariatur numquam sapiente
-        vitae sed mollitia fuga odio voluptatem repudiandae itaque, saepe, neque
-        a inventore temporibus quo dolor nulla praesentium? Eius, ea quia.
-        Consequatur placeat dignissimos beatae repellat temporibus ad quod neque
-        laboriosam consequuntur porro voluptatibus aliquam nobis quia accusamus
-        aspernatur, eaque adipisci atque est commodi, rerum autem? Impedit ipsa
-        natus vel perspiciatis dignissimos sapiente modi nostrum obcaecati,
-        nesciunt at vero consectetur sequi nobis! Maiores pariatur animi
-        reprehenderit? Sunt, vero inventore suscipit ipsam dolores optio
-        excepturi aut veniam et fuga quas itaque provident quae velit voluptate
-        adipisci quidem perferendis doloribus eum. Dolores pariatur mollitia
-        totam quos consectetur sit, voluptates corporis fugit incidunt
-        consequuntur vel non in, deleniti doloribus earum esse a voluptatem,
-        expedita assumenda aliquam quam itaque. Possimus voluptatum quisquam,
-        qui vel eveniet numquam asperiores, dolor fugiat ipsam officia ab sit
-        consectetur sequi reiciendis quae corporis accusantium obcaecati. Harum
-        accusamus sint consequatur maxime facere exercitationem fugiat totam
-        dolorem iure debitis.
-      </p>
+    <article class="kitchen-image-section">
+      <img
+        src="images/photos/teodor-skrebnev-DcIZJsskTfg-unsplash.jpg"
+        alt=""
+      />
     </article>
     <article class="our-mission-article">
       <h2>Our Mission</h2>
