added class to links container

--- a/bedroom-category-page.html
+++ b/bedroom-category-page.html
@@ -57,7 +57,7 @@
       <hr>
     </section>
     <section class="product-page-options">
-      <ul>
+      <ul class="options-list">
         <li>
           <img src="images/photos/deconovo-gVKmonDbotU-unsplash.jpg" alt="bed">\
           <a class="category-page-button" href="beds-product-listing-page.html">Small Beds</a>
