added class to product listing page link container

--- a/beds-product-listing-page.html
+++ b/beds-product-listing-page.html
@@ -65,7 +65,8 @@
     <section class="product-listing-section">
       <h2>Large Beds</h2>
       <hr />
-      <ul>
+      <ul class="product-list
+      ">
         <li>
           <img src="images/photos/beazy-5AwCzQganE8-unsplash.jpg" alt="bed" />
           <a
