--- a/beds-product-listing-page.html
+++ b/beds-product-listing-page.html
@@ -65,8 +65,7 @@
     <section class="product-listing-section">
       <h2>Large Beds</h2>
       <hr />
-      <ul class="product-list
-      ">
+      <ul class="product-list">
         <li>
           <img src="images/photos/beazy-5AwCzQganE8-unsplash.jpg" alt="bed" />
           <a
