worked on links

--- a/bedroom-listing-pages/large-beds.html
+++ b/bedroom-listing-pages/large-beds.html
@@ -4,8 +4,8 @@
     <title>Treecreeper Testing Site | Product Listing Page</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="images/icons/iconmonstr-circle-1-240 (1) (1).png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="/images/icons/iconmonstr-circle-1-240 (1) (1).png" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body id="listing-body">
     <nav class="listing-nav">
@@ -13,7 +13,7 @@
         <li>
           <a href="/">
             <img
-              src="images/icons/iconmonstr-circle-1-240 (1) (1).png"
+              src="/images/icons/iconmonstr-circle-1-240 (1) (1).png"
               alt="Logo"
             />
           </a>
@@ -27,19 +27,19 @@
     <section class="listing-products-nav products-nav">
       <ul>
         <li>
-          <a href="bedroom-category-page.html"> Bedroom </a>
+          <a href="/category-pages/bedroom.html"> Bedroom </a>
         </li>
         <li>
-          <a href="bedroom-category-page.html"> Kitchen </a>
+          <a href="/category-pages/bedroom.html"> Kitchen </a>
         </li>
         <li>
-          <a href="bedroom-category-page.html"> Garden </a>
+          <a href="/category-pages/bedroom.html"> Garden </a>
         </li>
         <li>
-          <a href="bedroom-category-page.html"> DIY </a>
+          <a href="/category-pages/bedroom.html"> DIY </a>
         </li>
         <li>
-          <a href="bedroom-category-page.html"> Electronics </a>
+          <a href="/category-pages/bedroom.html"> Electronics </a>
         </li>
       </ul>
     </section>
@@ -52,7 +52,7 @@
           <p>></p>
         </li>
         <li>
-          <a href="bedroom-category-page.html">Bedroom</a>
+          <a href="/category-pages/bedroom.html">Bedroom</a>
         </li>
         <li>
           <p>></p>
@@ -67,65 +67,65 @@
       <hr />
       <ul class="product-list">
         <li>
-          <img src="images/photos/beazy-5AwCzQganE8-unsplash.jpg" alt="bed" />
+          <img src="/images/photos/beazy-5AwCzQganE8-unsplash.jpg" alt="bed" />
           <a
             class="product-listing-page-button"
-            href="oak-bed-product-page.html"
+            href="/bedroom-listing-pages/oak-bed.html"
             >Oak Bed</a
           >
         </li>
         <li>
           <img
-            src="images/photos/erik-mclean-Ij9nIghkI6k-unsplash.jpg"
+            src="/images/photos/erik-mclean-Ij9nIghkI6k-unsplash.jpg"
             alt="bed"
           />
           <a
             class="product-listing-page-button"
-            href="oak-bed-product-page.html"
+            href="/bedroom-listing-pages/oak-bed.html"
             >Modern Bed</a
           >
         </li>
         <li>
           <img
-            src="images/photos/gus-tu-njana-8JPrzRRY4m8-unsplash.jpg"
+            src="/images/photos/gus-tu-njana-8JPrzRRY4m8-unsplash.jpg"
             alt="bed"
           />
           <a
             class="product-listing-page-button"
-            href="oak-bed-product-page.html"
+            href="/bedroom-listing-pages/oak-bed.html"
             >Low-Profile</a
           >
         </li>
         <li>
           <img
-            src="images/photos/luisa-brimble-eXlNXI0LfMM-unsplash.jpg"
+            src="/images/photos/luisa-brimble-eXlNXI0LfMM-unsplash.jpg"
             alt="bed"
           />
           <a
             class="product-listing-page-button"
-            href="product-pages/oak-bed-product-page.html"
+            href="product-pages//bedroom-listing-pages/oak-bed.html"
             >Minimal Bed</a
           >
         </li>
         <li>
           <img
-            src="images/photos/spacejoy-EAri64dQlF4-unsplash.jpg"
+            src="/images/photos/spacejoy-EAri64dQlF4-unsplash.jpg"
             alt="bed"
           />
           <a
             class="product-listing-page-button"
-            href="oak-bed-product-page.html"
+            href="/bedroom-listing-pages/oak-bed.html"
             >Exotic Bed</a
           >
         </li>
         <li>
           <img
-            src="images/photos/olena-sergienko-G-mDqDaM8mM-unsplash.jpg"
+            src="/images/photos/olena-sergienko-G-mDqDaM8mM-unsplash.jpg"
             alt="bed"
           />
           <a
             class="product-listing-page-button"
-            href="oak-bed-product-page.html"
+            href="/bedroom-listing-pages/oak-bed.html"
             >Drawer Bed</a
           >
         </li>
