--- a/category-pages/bedroom.html
+++ b/category-pages/bedroom.html
@@ -17,10 +17,10 @@
 					<img src="/images/icons/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
           </a>
         </li>
-        <li><a href="index.html">Stores</a></li>
-        <li><a href="index.html">Ideas & Advice</a></li>
-        <li><a href="index.html">Basket</a></li>
-        <li><a href="index.html">Contact</a></li>
+        <li><a href="/">Stores</a></li>
+        <li><a href="/">Ideas & Advice</a></li>
+        <li><a href="/">Basket</a></li>
+        <li><a href="/">Contact</a></li>
       </ul>
     </nav id="home-nav">
     <section class="products-nav">
@@ -60,34 +60,34 @@
       <ul class="options-list">
         <li>
           <img src="/images/photos/deconovo-gVKmonDbotU-unsplash.jpg" alt="bed">\
-          <a class="category-page-button" href="beds-product-listing-page.html">Small Beds</a>
+          <a class="category-page-button" href="/bedroom-listing-pages/large-beds.html">Small Beds</a>
         </li>
         <li>
           <img src="/images/photos/adam-winger-nclN_J0UtJ8-unsplash.jpg" alt="bed">
-          <a class="category-page-button" href="beds-product-listing-page.html">Medium Beds</a>
+          <a class="category-page-button" href="/bedroom-listing-pages/large-beds.html">Medium Beds</a>
         </li>
         <li>
           <img src="/images/photos/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="bed">
-           <a class="category-page-button" href="beds-product-listing-page.html">Large Beds</a>
+           <a class="category-page-button" href="/bedroom-listing-pages/large-beds.html">Large Beds</a>
         </li>
         <li>
           <img src="/images/photos/gaelle-marcel-awYrEHKWEk4-unsplash.jpg" alt="bed">
-           <a class="category-page-button" href="beds-product-listing-page.html">Futons</a>
+           <a class="category-page-button" href="/bedroom-listing-pages/large-beds.html">Futons</a>
         </li>        <li>
           <img src="/images/photos/greg-rivers-YeP1MUZDSsE-unsplash.jpg" alt="bed">
-           <a class="category-page-button" href="beds-product-listing-page.html">Classic Beds</a>
+           <a class="category-page-button" href="/bedroom-listing-pages/large-beds.html">Classic Beds</a>
         </li>        <li>
           <img src="/images/photos/priscilla-du-preez-LpZMZXXpRcM-unsplash.jpg" alt="bed">
-           <a class="category-page-button" href="beds-product-listing-page.html">Custom Beds</a>
+           <a class="category-page-button" href="/bedroom-listing-pages/large-beds.html">Custom Beds</a>
         </li>
       </ul>
     </section>
     <footer class="socials-footer">
   <ul>
-    <li><a href="index.html">Instagram</a></li>
-    <li><a href="index.html">Facebook</a></li>
-    <li><a href="index.html">Twitter</a></li>
-    <li><a href="index.html">Email</a></li>
+    <li><a href="/">Instagram</a></li>
+    <li><a href="/">Facebook</a></li>
+    <li><a href="/">Twitter</a></li>
+    <li><a href="/">Email</a></li>
   </ul>
 </footer>
 </body>
